tests/baselines/reference/parserVariableDeclaration3.errors.txt
==== tests/cases/compiler/parserVariableDeclaration3.ts (4 errors) ====
    function runTests() {
        var outfile = new Harness.Compiler.WriterAggregator()
                          ~~~~~~~
!!! parserVariableDeclaration3.ts(2,23): error TS2095: Cannot find name 'Harness'.
          , outerr = new Harness.Compiler.WriterAggregator()
                         ~~~~~~~
!!! parserVariableDeclaration3.ts(3,22): error TS2095: Cannot find name 'Harness'.
          , compiler = <TypeScript.TypeScriptCompiler>new TypeScript.TypeScriptCompiler(outerr)
                        ~~~~~~~~~~
!!! parserVariableDeclaration3.ts(4,21): error TS2095: Cannot find name 'TypeScript'.
                                                          ~~~~~~~~~~
!!! parserVariableDeclaration3.ts(4,55): error TS2095: Cannot find name 'TypeScript'.
          , code;
    }